<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_scrollview"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_20dp"
            android:layout_marginRight="@dimen/padding_20dp"
            android:layout_marginTop="@dimen/padding_10dp"
            android:text="@string/barcode" />

        <EditText
            android:id="@+id/edt_barcode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:layout_marginLeft="@dimen/padding_20dp"
            android:layout_marginRight="@dimen/padding_20dp"
            android:layout_marginTop="@dimen/padding_5dp"
            android:background="@drawable/edit_text_design"
            android:ems="15"
            android:hint="@string/input_barcode"
            android:inputType="text"
            android:padding="@dimen/padding_10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_20dp"
            android:layout_marginRight="@dimen/padding_20dp"
            android:layout_marginTop="@dimen/padding_10dp"
            android:text="@string/receiver" />

        <EditText
            android:id="@+id/edt_receiver"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:layout_marginLeft="@dimen/padding_20dp"
            android:layout_marginRight="@dimen/padding_20dp"
            android:layout_marginTop="@dimen/padding_5dp"
            android:background="@drawable/edit_text_design"
            android:ems="15"
            android:hint="@string/input_receiver"
            android:inputType="text"
            android:padding="@dimen/padding_10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_20dp"
            android:layout_marginRight="@dimen/padding_20dp"
            android:layout_marginTop="@dimen/padding_10dp"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height"
            android:layout_marginLeft="@dimen/padding_20dp"
            android:layout_marginRight="@dimen/padding_20dp"
            android:layout_marginTop="@dimen/padding_5dp"
            android:background="@drawable/edit_text_design"
            android:ems="15"
            android:hint="@string/input_phone"
            android:inputType="number"
            android:padding="@dimen/padding_10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_20dp"
            android:layout_marginRight="@dimen/padding_20dp"
            android:layout_marginTop="@dimen/padding_10dp"
            android:text="@string/address" />

        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_20dp"
            android:layout_marginRight="@dimen/padding_20dp"
            android:layout_marginTop="@dimen/padding_5dp"
            android:background="@drawable/edit_text_design"
            android:ems="15"
            android:hint="@string/input_address"
            android:inputType="textMultiLine"
            android:gravity="top|left"
            android:lines="6"
            android:maxLines="10"
            android:minLines="2"
            android:minHeight="@dimen/edt_height"
            android:padding="@dimen/padding_10dp" />

        <Button
            android:id="@+id/btn_print"
            android:onClick="actionPrint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_20dp"
            android:layout_marginLeft="@dimen/padding_20dp"
            android:layout_marginRight="@dimen/padding_20dp"
            android:background="@drawable/custom_button_round_rect_border_dis"
            android:text="@string/print"
            android:textColor="@color/colorPrimary" />
        <TextView
            android:layout_width="match_parent" android:id="@+id/textView_state"
            android:layout_height="match_parent" />
    </LinearLayout>
</ScrollView>